@@ -5,7 +5,7 @@
   "homepage": "http://github.com/JohnDoh/Roundcube-Plugin-Mark-as-Junk-2/",
   "license": "GPL-3.0",
   "type": "roundcube-plugin",
-  "version": "1.11.1",
+  "version": "1.12",
   "authors": [
     {
       "name": "Philip Weir",
