@@ -2,10 +2,12 @@
 
 /**
  * Email learn driver
- * @version 2.0
+ * @version 3.0
  * @author Philip Weir
  *
- * Copyright (C) 2009-2014 Philip Weir
+ * NOTICE: THIS DRIVER REQUIRES ROUNDCUBE 1.4 OR ABOVE
+ *
+ * Copyright (C) 2009-2017 Philip Weir
  *
  * This driver is part of the MarkASJunk2 plugin for Roundcube.
  *
@@ -40,168 +42,130 @@ class markasjunk2_email_learn
         $rcmail = rcube::get_instance();
         $identity_arr = $rcmail->user->get_identity();
         $from = $identity_arr['email'];
+        $from_string = format_email_recipient($identity_arr['email'], $identity_arr['name']);
+        $attach = $rcmail->config->get('markasjunk2_email_attach', false);
+        $temp_dir = unslashify($rcmail->config->get('temp_dir'));
 
-        if ($spam)
-            $mailto = $rcmail->config->get('markasjunk2_email_spam');
-        else
-            $mailto = $rcmail->config->get('markasjunk2_email_ham');
+        $mailto = $rcmail->config->get($spam ? 'markasjunk2_email_spam' : 'markasjunk2_email_ham');
+        $mailto = $this->_parse_vars($mailto, $spam, $from);
 
-        $mailto = str_replace('%u', $_SESSION['username'], $mailto);
-        $mailto = str_replace('%l', $rcmail->user->get_username('local'), $mailto);
-        $mailto = str_replace('%d', $rcmail->user->get_username('domain'), $mailto);
-        $mailto = str_replace('%i', $from, $mailto);
-
+        // no address to send to, exit
         if (!$mailto)
             return;
 
-        $message_charset = $rcmail->output->get_charset();
-        // chose transfer encoding
-        $charset_7bit = array('ASCII', 'ISO-2022-JP', 'ISO-8859-1', 'ISO-8859-2', 'ISO-8859-15');
-        $transfer_encoding = in_array(strtoupper($message_charset), $charset_7bit) ? '7bit' : '8bit';
-
-        $temp_dir = realpath($rcmail->config->get('temp_dir'));
-
         $subject = $rcmail->config->get('markasjunk2_email_subject');
-        $subject = str_replace('%u', $_SESSION['username'], $subject);
-        $subject = str_replace('%t', ($spam) ? 'spam' : 'ham', $subject);
-        $subject = str_replace('%l', $rcmail->user->get_username('local'), $subject);
-        $subject = str_replace('%d', $rcmail->user->get_username('domain'), $subject);
-
-        // compose headers array
-        $headers = array();
-        $headers['Date'] = date('r');
-        $headers['From'] = format_email_recipient($identity_arr['email'], $identity_arr['name']);
-        $headers['To'] = $mailto;
-        $headers['Subject'] = $subject;
+        $subject = $this->_parse_vars($subject, $spam, $from);
 
         foreach ($uids as $uid) {
             $MESSAGE = new rcube_message($uid);
+            $message_file = null;
 
             // set message charset as default
             if (!empty($MESSAGE->headers->charset))
                 $rcmail->storage->set_charset($MESSAGE->headers->charset);
 
-            $MAIL_MIME = new Mail_mime($rcmail->config->header_delimiter());
+            $OUTPUT = $rcmail->output;
+            $SENDMAIL = new rcmail_sendmail(null, array(
+                    'sendmail' => true,
+                    'from' => $from,
+                    'mailto' => $mailto,
+                    'dsn_enabled' => false,
+                    'charset' => 'UTF-8',
+                    'error_handler' => function() use ($OUTPUT) {
+                        call_user_func_array(array($OUTPUT, 'show_message'), func_get_args());
+                        $OUTPUT->send();
+                    }
+                ));
 
-            if ($rcmail->config->get('markasjunk2_email_attach', false)) {
-                $tmpPath = tempnam($temp_dir, 'rcmMarkASJunk2');
+            if ($attach) {
+                $headers = array(
+                    'Date' => $rcmail->user_date(),
+                    'From' => $from_string,
+                    'To' => $mailto,
+                    'Subject' => $subject,
+                    'User-Agent' => $rcmail->config->get('useragent'),
+                    'Message-ID' => $rcmail->gen_message_id($from),
+                    'X-Sender' => $from
+                );
 
-                // send mail as attachment
-                $MAIL_MIME->setTXTBody(($spam ? 'Spam' : 'Ham'). ' report from ' . $rcmail->config->get('product_name'), false, true);
+                $message_text = ($spam ? 'Spam' : 'Ham'). ' report from ' . $rcmail->config->get('product_name');
 
-                $raw_message = $rcmail->storage->get_raw_body($uid);
-                $subject = $MESSAGE->get_header('subject');
+                // create attachment
+                $orig_subject = $MESSAGE->get_header('subject');
+                $disp_name = (!empty($orig_subject) ? $orig_subject : 'message_rfc822') . '.eml';
+                $message_file = tempnam($temp_dir, 'rcmMarkAsJunk2');
 
-                if (isset($subject) && $subject !="")
-                    $disp_name = $subject . ".eml";
-                else
-                    $disp_name = "message_rfc822.eml";
+                $attachment = array();
+                if ($fp = fopen($message_file, 'w')) {
+                    $rcmail->storage->get_raw_body($uid, $fp);
+                    fclose($fp);
 
-                if (file_put_contents($tmpPath, $raw_message)) {
-                    $MAIL_MIME->addAttachment($tmpPath, "message/rfc822", $disp_name, true,
-                        $transfer_encoding, 'attachment', '', '', '',
-                        $rcmail->config->get('mime_param_folding') ? 'quoted-printable' : NULL,
-                        $rcmail->config->get('mime_param_folding') == 2 ? 'quoted-printable' : NULL,
+                    $attachment = array(
+                        'name' => $disp_name,
+                        'mimetype' => 'message/rfc822',
+                        'path' => $message_file,
+                        'size' => filesize($message_file),
+                        'charset' => $MESSAGE->headers->charset
+                    );
+                }
+
+                // create message
+                $MAIL_MIME = $SENDMAIL->create_message($headers, $message_text, false, array($attachment));
+
+                if (count($attachment) > 0) { // sanity check incase creating the attachment failed
+                    $folding = (int) $rcmail->config->get('mime_param_folding');
+
+                    $MAIL_MIME->addAttachment($attachment['path'],
+                        $attachment['mimetype'], $attachment['name'], true,
+                        '8bit', 'attachment', $attachment['charset'], '', '',
+                        $folding ? 'quoted-printable' : NULL,
+                        $folding == 2 ? 'quoted-printable' : NULL,
                         '', RCUBE_CHARSET
                     );
                 }
-
-                // encoding settings for mail composing
-                $MAIL_MIME->setParam('text_encoding', $transfer_encoding);
-                $MAIL_MIME->setParam('html_encoding', 'quoted-printable');
-                $MAIL_MIME->setParam('head_encoding', 'quoted-printable');
-                $MAIL_MIME->setParam('head_charset', $message_charset);
-                $MAIL_MIME->setParam('html_charset', $message_charset);
-                $MAIL_MIME->setParam('text_charset', $message_charset);
-
-                // pass headers to message object
-                $MAIL_MIME->headers($headers);
             }
             else {
-                $headers['Resent-From'] = $headers['From'];
-                $headers['Resent-Date'] = $headers['Date'];
-                $headers['Date'] = $MESSAGE->headers->date;
-                $headers['From'] = $MESSAGE->headers->from;
-                $headers['Subject'] = $MESSAGE->headers->subject;
-                $MAIL_MIME->headers($headers);
+                $headers = array(
+                    'Resent-From' => $from_string,
+                    'Resent-To' => $mailto,
+                    'Resent-Date' => $rcmail->user_date(),
+                    'Resent-Message-ID' => $rcmail->gen_message_id($from)
+                );
 
-                if ($MESSAGE->has_html_part()) {
-                    $body = $MESSAGE->first_html_part();
-                    $MAIL_MIME->setHTMLBody($body);
-                }
-
-                $body = $MESSAGE->first_text_part();
-                $MAIL_MIME->setTXTBody($body, false, true);
-
-                foreach ($MESSAGE->attachments as $attachment) {
-                    $MAIL_MIME->addAttachment(
-                        $MESSAGE->get_part_body($attachment->mime_id, true),
-                        $attachment->mimetype,
-                        $attachment->filename,
-                        false,
-                        $attachment->encoding,
-                        $attachment->disposition,
-                        '', $attachment->charset
-                    );
-                }
-
-                foreach ($MESSAGE->mime_parts as $attachment) {
-                    if (!empty($attachment->content_id)) {
-                        // covert CID to Mail_MIME format
-                        $attachment->content_id = str_replace('<', '', $attachment->content_id);
-                        $attachment->content_id = str_replace('>', '', $attachment->content_id);
-
-                        if (empty($attachment->filename))
-                            $attachment->filename = $attachment->content_id;
-
-                        $message_body = $MAIL_MIME->getHTMLBody();
-                        $dispurl = 'cid:' . $attachment->content_id;
-                        $message_body = str_replace($dispurl, $attachment->filename, $message_body);
-                        $MAIL_MIME->setHTMLBody($message_body);
-
-                        $MAIL_MIME->addHTMLImage(
-                            $MESSAGE->get_part_body($attachment->mime_id, true),
-                            $attachment->mimetype,
-                            $attachment->filename,
-                            false
-                        );
-                    }
-                }
-
-                // encoding settings for mail composing
-                $MAIL_MIME->setParam('head_encoding', $MESSAGE->headers->encoding);
-                $MAIL_MIME->setParam('head_charset', $MESSAGE->headers->charset);
-
-                foreach ($MESSAGE->mime_parts as $mime_id => $part) {
-                    $mimetype = strtolower($part->ctype_primary . '/' . $part->ctype_secondary);
-
-                    if ($mimetype == 'text/html') {
-                        $MAIL_MIME->setParam('text_encoding', $part->encoding);
-                        $MAIL_MIME->setParam('html_charset', $part->charset);
-                    }
-                    else if ($mimetype == 'text/plain') {
-                        $MAIL_MIME->setParam('html_encoding', $part->encoding);
-                        $MAIL_MIME->setParam('text_charset', $part->charset);
-                    }
-                }
+                // create the bounce message
+                $MAIL_MIME = new rcmail_resend_mail(array(
+                    'bounce_message' => $MESSAGE,
+                    'bounce_headers' => $headers,
+                ));
             }
 
-            $rcmail->deliver_message($MAIL_MIME, $from, $mailto, $smtp_error, $body_file);
+            $SENDMAIL->deliver_message($MAIL_MIME);
+            $message_file = $message_file ?: $MAIL_MIME->mailbody_file;
 
             // clean up
-            if (file_exists($tmpPath))
-                unlink($tmpPath);
+            if ($message_file)
+                unlink($message_file);
 
             if ($rcmail->config->get('markasjunk2_debug')) {
-                if ($spam)
-                    rcube::write_log('markasjunk2', $uid . ' SPAM ' . $mailto . ' (' . $subject . ')');
-                else
-                    rcube::write_log('markasjunk2', $uid . ' HAM ' . $mailto . ' (' . $subject . ')');
+                rcube::write_log('markasjunk2', $uid . ($spam ? ' SPAM ' : ' HAM ') . $mailto . ' (' . $subject . ')');
 
                 if ($smtp_error['vars'])
                     rcube::write_log('markasjunk2', $smtp_error['vars']);
             }
         }
+    }
+
+    private function _parse_vars($data, $spam, $from)
+    {
+        $rcmail = rcube::get_instance();
+
+        $data = str_replace('%u', $_SESSION['username'], $data);
+        $data = str_replace('%t', $spam ? 'spam' : 'ham', $data);
+        $data = str_replace('%l', $rcmail->user->get_username('local'), $data);
+        $data = str_replace('%d', $rcmail->user->get_username('domain'), $data);
+        $data = str_replace('%i', $from, $data);
+
+        return $data;
     }
 }
 
